feat(jwt): new own jwt authentication and spotify refresh token logics

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
       "services/*": ["src/services/*"],
       "routes": ["src/routes/index.ts"],
       "routes/*": ["src/routes/*"],
+      "db": ["src/db/index.ts"],
+      "db/*": ["src/db/*"],
       "config": ["src/environment"]
     },
     "typeRoots": [
