--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.18.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.3.0",
+    "pg": "^7.4.3",
     "query-string": "^5.0.0"
   },
   "devDependencies": {
@@ -23,7 +25,9 @@
     "@semantic-release/github": "^4.4.1",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
+    "@types/jsonwebtoken": "^7.2.8",
     "@types/node": "^10.5.2",
+    "@types/pg": "^7.4.10",
     "@types/query-string": "^6.1.0",
     "dotenv": "^6.0.0",
     "nodemon": "^1.18.2",
