fix(secrets): put jwt secrets on image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - setup_remote_docker
       - run:
           name: Build docker image
-          command: docker build . -t soundplace-auth --build-arg SPOTIFY_ID=$SPOTIFY_ID --build-arg SPOTIFY_SECRET=$SPOTIFY_SECRET
+          command: docker build . -t soundplace-auth --build-arg SPOTIFY_ID=$SPOTIFY_ID --build-arg SPOTIFY_SECRET=$SPOTIFY_SECRET --build-arg JWT_SECRET=$JWT_SECRET
       - run:
           name: Publish docker image
           command: |
