--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "googleapis": "^32.0.0",
     "jsonwebtoken": "^8.3.0",
     "pg": "^7.4.3",
     "query-string": "^5.0.0"
